--- a/NetShopeWeb/Views/Account/RegisterCustomer.cshtml
+++ b/NetShopeWeb/Views/Account/RegisterCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@model  NetShopeBusiness.Model.CustomerVM
+﻿@model  NetShopeWeb.ViewModel.CustomerVM
 @{
     ViewBag.Title = "RegisterCustomer";
     Layout = "~/Views/Shared/_Layout1.cshtml";
