--- a/NetShopeWeb/Views/Customer/Index.cshtml
+++ b/NetShopeWeb/Views/Customer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyEcommerceAdmin.Models.Customer>
+﻿@model IEnumerable<NetShopeBusiness.Model.Customer>
 @{
     ViewBag.Title = "Customer Information";
 }
