--- a/NetShopeWeb/Views/Employee/Index.cshtml
+++ b/NetShopeWeb/Views/Employee/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyEcommerceAdmin.Models.admin_Employee>
+﻿@model IEnumerable<NetShopeBusiness.Model.admin_Employee>
 @{
     ViewBag.Title = "Employee Information";
 }
