--- a/NetShopeWeb/Views/MyCart/Index.cshtml
+++ b/NetShopeWeb/Views/MyCart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyEcommerceAdmin.Models.OrderDetail>
+﻿@model IEnumerable<NetShopeBusiness.Model.OrderDetail>
 @{ 
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout1.cshtml";
