--- a/NetShopeWeb/Views/Order/Details.cshtml
+++ b/NetShopeWeb/Views/Order/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using MyEcommerceAdmin.Models;
+﻿@using NetShopeBusiness.Model;
 @model Tuple<Order, IEnumerable<OrderDetail>>
 @{
     ViewBag.Title = "Order";
