--- a/NetShopeWeb/Views/Order/Index.cshtml
+++ b/NetShopeWeb/Views/Order/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyEcommerceAdmin.Models.Order>
+﻿@model IEnumerable<NetShopeBusiness.Model.Order>
 
 @{
     ViewBag.Title = "Order";
