--- a/NetShopeWeb/Views/Product/Index.cshtml
+++ b/NetShopeWeb/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyEcommerceAdmin.Models.Product>
+﻿@model IEnumerable<NetShopeBusiness.Model.Product>
 @{
     ViewBag.Title = "Product Information";
 }
