--- a/NetShopeWeb/Views/Supplier/Index.cshtml
+++ b/NetShopeWeb/Views/Supplier/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyEcommerceAdmin.Models.Supplier>
+﻿@model IEnumerable<NetShopeBusiness.Model.Supplier>
 @{
     ViewBag.Title = "Supplier Information";
 }
