--- a/NetShopeWeb/Views/CheckOut/Index.cshtml
+++ b/NetShopeWeb/Views/CheckOut/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Index</h2>
 
-@model IEnumerable<MyEcommerceAdmin.Models.OrderDetail>
+@model IEnumerable<NetShopeBusiness.Model.OrderDetail>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout1.cshtml";
