--- a/NetShopeWeb/Views/Product/Create.cshtml
+++ b/NetShopeWeb/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model  NetShopeBusiness.Model.ProductVM
+﻿@model  NetShopeWeb.ViewModel.ProductVM
 @{
     ViewBag.Title = "Add New Product";
 }
@@ -60,9 +60,10 @@
                     </div>
                     <div class="col-md-6">
                         @Html.LabelFor(x => x.Picture, new { @class = "form-label fs-4" })
-                        @Html.TextBoxFor(x => x.Picture, new { @class = "form-control fs-4", Type = "file" })
+                        @Html.TextBoxFor(x => x.Picture, new { @class = "form-control fs-4", Type = "file", multiple = "multiple" })
                         @Html.ValidationMessageFor(x => x.Picture, "", new { @class = "text-danger" })
                     </div>
+
 
                     <div class="col-md-6 mt-4">
                         <button type="submit" class="btn btn-success btn-lg col-12 mt-4"><i class="fa-regular fa-floppy-disk fs-4"></i> Save</button>
