--- a/NetShopeWeb/Views/Product1/Products.cshtml
+++ b/NetShopeWeb/Views/Product1/Products.cshtml
@@ -1,7 +1,7 @@
 ﻿@using PagedList;
 @*@using PagedList.Mvc;*@
 
-@model IPagedList<MyEcommerceAdmin.Models.Product>
+@model IPagedList<NetShopeBusiness.Model.Product>
 @{
     ViewBag.Title = "Products";
     Layout = "~/Views/Shared/_Layout1.cshtml";
@@ -102,10 +102,17 @@
                         <h3>Recently Views</h3>
                         <div class="aa-recently-views">
                             <ul>
-                                @foreach (MyEcommerceAdmin.Models.Product item in ViewBag.RecentViewsProducts)
+                                @foreach (NetShopeBusiness.Model.Product item in ViewBag.RecentViewsProducts)
                                 {
                                     <li>
-                                        <a href="@Url.Action("ViewDetails", "Product1", new { id = item.ProductID })" class="aa-cartbox-img"><img alt="" src="@Url.Content(item.PicturePath)"></a>
+                                        <a href="@Url.Action("ViewDetails", "Product1", new { id = item.ProductID })" class="aa-cartbox-img">
+                                            <ul>
+                                                @foreach (var picturePath in item.Pictures)
+                                                {
+                                                    <li><img alt="" src="@Url.Content(picturePath.PicturePath)"></li>
+                                                }
+                                            </ul>
+                                        </a>
                                         <div class="aa-cartbox-info">
                                             <h4><b><a href="@Url.Action("ViewDetails", "Product1", new { id = item.ProductID })">@item.Name</a></b></h4>
                                             <p>TK. @item.UnitPrice</p>
@@ -166,7 +173,7 @@
             <h3>Top Sold Products</h3>
             <div class="aa-recently-views">
                 <ul>
-                    @foreach (MyEcommerceAdmin.Models.TopSoldProduct item in ViewBag.TopRatedProducts)
+                    @foreach (NetShopeBusiness.Model.TopSoldProduct item in ViewBag.TopRatedProducts)
                     {
 
         <li>
