--- a/NetShopeWeb/Views/WishList/Index.cshtml
+++ b/NetShopeWeb/Views/WishList/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyEcommerceAdmin.Models.Wishlist>
+﻿@model IEnumerable<NetShopeBusiness.Model.Wishlist>
 @{
     ViewBag.Title = "Wishlist";
     Layout = "~/Views/Shared/_Layout1.cshtml";
