--- a/NetShopeWeb/Views/Shared/_Product.cshtml
+++ b/NetShopeWeb/Views/Shared/_Product.cshtml
@@ -1,38 +1,44 @@
 ﻿@model  NetShopeBusiness.Model.Product
-<li>
-    <figure>
-        <a class="aa-product-img" href="@Url.Action("ViewDetails", "Product1", new { id = Model.ProductID })">
-            <ul>
-                @foreach (var item in Model.Pictures)
-                {
-                    <li>
-                        <img src="@Url.Content(item.PicturePath)" alt="" class="img-fluid img-thumbnail">
-                    </li>
-                }
-            </ul>
-        </a>
-        <a class="aa-add-card-btn" href="@(Session["username"] != null ? Url.Action("AddToCart", "Product1", new { id = Model.ProductID}) : Url.Action("Login", "Account"))">
-            <span class="fa fa-shopping-cart"></span> Add To Cart
-        </a>
-        <figcaption>
-            <h4 class="aa-product-title"><a href="#">@Model.Name</a></h4>
-            <span class="aa-product-price">TK. @Model.UnitPrice</span>
-            <span class="aa-product-old-price">
-                <del>
-                    @if (Model.OldPrice != null)
+<div class="col-md-4 col-sm-6">
+    <div class="card">
+        <a href="@Url.Action("ViewDetails", "Product1", new { id = Model.ProductID })">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    @foreach (var item in Model.Pictures)
                     {
-                        <text>TK. @Model.OldPrice</text>
+                        <div class="carousel-item @(item == Model.Pictures.First() ? "active" : "")">
+                            <img src="@Url.Content("~/Images/" + item.PicturePath)" alt="Product Image" class="d-block w-100">
+                        </div>
                     }
-                </del>
-            </span>
-        </figcaption>
-    </figure>
-
-    <div class="aa-product-hvr-content">
-        <a href="@(Session["username"]!=null ? Url.Action("WishList","Product1", new {id=@Model.ProductID }) :Url.Action("Login","Account"))" data-toggle="tooltip" data-placement="top" title="Add to Wishlist"><span class="fa fa-heart-o"></span></a>
-        <a href="@Url.Action("ViewDetails", "Product1", new { id = Model.ProductID })" title="View Details" data-toggle="tooltip" data-placement="top"><span class="fa fa-info"></span></a>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </a>
+        <div class="card-body">
+            <h5 class="card-text">@Model.Name</h5>
+            <p class="card-text">
+                <span class="_30jeq3">₹ @Model.UnitPrice</span>
+            </p>
+            <a href="@(Session["username"] != null ? Url.Action("AddToCart", "Product1", new { id = Model.ProductID}) : Url.Action("Login", "Account"))" class="btn btn-primary">
+                <span class="fa fa-shopping-cart"></span> Add To Cart
+            </a>
+        </div>
+        <div class="card-footer">
+            <div class="aa-product-hvr-content">
+                <a href="@(Session["username"]!=null ? Url.Action("WishList","Product1", new {id=@Model.ProductID }) :Url.Action("Login","Account"))" data-toggle="tooltip" data-placement="top" title="Add to Wishlist"><span class="fa fa-heart-o"></span></a>
+                <a href="@Url.Action("ViewDetails", "Product1", new { id = Model.ProductID })" title="View Details" data-toggle="tooltip" data-placement="top"><span class="fa fa-info"></span></a>
+            </div>
+        </div>
     </div>
-</li>
+</div>
+
 
 
 
