--- a/NetShopeWeb/Views/Shared/_Product.cshtml
+++ b/NetShopeWeb/Views/Shared/_Product.cshtml
@@ -1,24 +1,24 @@
 ﻿@model  NetShopeBusiness.Model.Product
+@using Newtonsoft.Json
+@using NetShopeWeb.ViewModel
 <div class="col-md-4 col-sm-6">
-    <div class="card">
+    <div class="card-body">
         <a href="@Url.Action("ViewDetails", "Product1", new { id = Model.ProductID })">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    @foreach (var item in Model.Pictures)
-                    {
-                        <div class="carousel-item @(item == Model.Pictures.First() ? "active" : "")">
-                            <img src="@Url.Content("~/Images/" + item.PicturePath)" alt="Product Image" class="d-block w-100">
-                        </div>
-                    }
+                    <div class="carousel">
+                        @foreach (var item in Model.Pictures)
+                        {
+                            if (item == Model.Pictures.First())
+                            {
+                                <div class="carousel-item">
+                                    <img src="@Url.Content("~/Images/" + item.PicturePath)" alt="Product Image" class="d-block w-100">
+                                </div>
+                            }
+                        }
+                    </div>
+
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
         </a>
         <div class="card-body">
@@ -38,7 +38,31 @@
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function() {
+        var model = @Html.JsonOf(Model);
+        var vapp = new Vue({
+            data: {
+                model: model,
+                currentIndex: 0
+            },
+            mounted: function () {
+                console.log('Pictures.PicturePath:', this.model.Pictures)
+            },
+            methods: {
+                getImagePath: function (path) {
+                    // Assuming path is relative to the Images folder
+                    return `/Images/${path}`;
+                },
+                nextImage: function () {
+                    this.currentIndex = (this.currentIndex + 1) % this.model.Pictures.length;
+                }
+            },
 
+        });
+
+    })
+</script>
 
 
 
