--- a/NetShopeWeb/Views/admin_Login/Index.cshtml
+++ b/NetShopeWeb/Views/admin_Login/Index.cshtml
@@ -6,11 +6,11 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
     <title>Admin-Login</title>
-    <link href="~/Content/CSS/bootstrap.css" rel="stylesheet" />
-    <link href="~/Fontawesome/css/all.css" rel="stylesheet" />
-    <link href="~/Content/CSS/form.css" rel="stylesheet" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
