--- a/NetShopeWeb/Views/Shared/_Layout1.cshtml
+++ b/NetShopeWeb/Views/Shared/_Layout1.cshtml
@@ -72,13 +72,13 @@
                                 <div class="aa-currency">
                                     <div class="dropdown">
                                         <a class="btn dropdown-toggle" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                            <i class="fa fa-money"></i>BDT
+                                            <i class="fa fa-money"></i>INR
                                         </a>
                                     </div>
                                 </div>
                                 <!-- start cellphone -->
                                 <div class="cellphone hidden-xs">
-                                    <p><span class="fa fa-phone"></span>017-6558-6588</p>
+                                    <p><span class="fa fa-phone"></span>8411947042</p>
                                 </div>
                             </div>
                             <!-- header top Right -->
@@ -131,7 +131,7 @@
                                 <!-- Text based logo -->
                                 <a href="@Url.Action("Index","Home")">
                                     <span class="fa fa-shopping-cart"></span>
-                                    <p>IsDB-BISEW<strong>.ORG</strong> <span>Trusted Online Shop</span></p>
+                                    <p>NETSHOPNEXUS<strong></strong> <span>Trusted Online Shop</span></p>
                                 </a>
                             </div>
 
