--- a/NetShopeWeb/Views/Shared/_Product.cshtml
+++ b/NetShopeWeb/Views/Shared/_Product.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model  NetShopeBusiness.Model.Product
 @using Newtonsoft.Json
 @using NetShopeWeb.ViewModel
 
@@ -41,7 +41,6 @@
                         <a href="@Url.Action("ViewDetails", "Product1", new { id = Model.ProductID })" title="View Details" data-toggle="tooltip" data-placement="top"><span class="fa fa-info"></span></a>
                     </div>
                 </div>
->>>>>>> Stashed changes
             </div>
         </div>
     </div>
