--- a/NetShopeWeb/Views/Account/RegisterCustomer.cshtml
+++ b/NetShopeWeb/Views/Account/RegisterCustomer.cshtml
@@ -1,13 +1,20 @@
 ﻿@model  NetShopeWeb.ViewModel.CustomerVM
 @{
     ViewBag.Title = "RegisterCustomer";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = null;
 }
+<head>
+    <title>Admin-Login</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+</head>
 <div class="container">
     <div class="row">
         <div class="col">
-           
-           
+
+
             <div class="col-md-12">
                 <h2 class="text-info" style="padding-top:20px;">Register Now</h2>
                 <hr />
